--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cucumberjs-browserstack",
+  "name": "cucumber-js-browserstack",
   "version": "0.0.1",
   "description": "Example test to integrate BrowserStack with CucumberJS",
   "repository": {
@@ -7,12 +7,18 @@
     "url": "https://github.com/browserstack/cucumber-js-browserstack"
   },
   "scripts": {
-    "test": "./node_modules/cucumber/bin/cucumber.js"
+    "test": "./node_modules/cucumber/bin/cucumber.js",
+    "test_parallel": "./node_modules/.bin/parallel-cucumber-js",
+    "test_local": "TEST_TYPE=local ./node_modules/cucumber/bin/cucumber.js"
   },
   "devDependencies": {
     "cucumber": "~0.4.4",
     "selenium-webdriver": "~2.44.0",
     "chai": "~1.10.0",
     "sanitize-filename": "~1.1.1"
+  },
+  "dependencies": {
+    "browserstack-local": "^0.1.0",
+    "parallel-cucumber": "^0.1.7"
   }
 }
