--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "parallel": "CONFIG_FILE=parallel ./scripts/cucumber-runner.js features/single.feature"
   },
   "devDependencies": {
-    "cucumber": "*",
+    "cucumber": "1.3.3",
     "cucumber-assert": "*",
     "selenium-webdriver": "^2.53.2"
   },
