--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "cucumber": "1.3.3",
-    "cucumber-assert": "*",
+    "cucumber-assert": "1.0.4",
     "selenium-webdriver": "^2.53.2"
   },
   "dependencies": {
